<resources>
    <string name="app_name">TegalTour</string>
    <string name="hint_username">username</string>
    <string name="hint_password">password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="kontinue">Continue as Guest</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="API_KEY">AIzaSyAtvpoiRWC2nZsVoxlDd4xVYO_Gv_F2BuY</string>
    <string name="api_direction2">AIzaSyDgkzC5t8WMEfnnRaACAAKe8PeGCBzKq7c</string>
</resources>
