<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.octora.mpdev.tegaltour.LoginActivity"
    android:background="@drawable/bglogin">

    <ImageView
        android:id="@+id/logo_login"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:background="@drawable/logo_kecil_tg_white"
        android:contentDescription="@string/app_name" />
    <EditText
        android:layout_below="@id/logo_login"
        android:id="@+id/login_username"
        android:hint="@string/hint_username"
        android:inputType="text"
        style="@style/textBox_login" />
    <EditText
        android:layout_below="@id/login_username"
        android:id="@+id/login_password"
        android:layout_marginTop="5dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        style="@style/textBox_login"/>

    <Button
        android:id="@+id/btn_login"
        style="@style/btnLogin"
        android:layout_below="@id/login_password"
        android:layout_marginTop="40dp"
        android:fontFamily="casual"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/txt_haveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn_login"
        android:text="Don't have any account?"
        android:textColor="@color/putih"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/txt_or"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txt_haveAccount"
        android:text="-or-"
        android:textColor="@color/putih"
        android:layout_marginTop="30dp"
        android:gravity="center"
        />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@id/txt_or"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:layout_toLeftOf="@id/txt_or"
        android:background="@drawable/btn_"
        android:fontFamily="casual"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:textColor="@color/putih" />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/txt_or"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="10dp"
        android:layout_toRightOf="@id/txt_or"
        android:background="@drawable/btn_"
        android:fontFamily="casual"
        android:text="@string/kontinue"
        android:textAllCaps="false"
        android:textColor="@color/putih" />
</RelativeLayout>
